--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "url": "https://github.com/aryaemami59/typescript-utility-functions"
   },
   "type": "module",
+  "types": "dist/index.d.ts",
+  "module": "dist/index.js",
   "keywords": [],
   "license": "ISC",
   "files": [
