--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "type": "git",
     "url": "https://github.com/aryaemami59/typescript-utility-functions"
   },
-  "type": "module",
   "keywords": [],
   "license": "ISC",
   "files": [
     "dist"
   ],
   "scripts": {
-    "start": "ts-node src/index.ts",
     "lint": "eslint . --ext ts",
     "format": "eslint . --fix --ext ts",
-    "build": "rm -rf dist && tsc",
-    "prepublish": "npm run build"
+    "build": "rm -rf dist && tsc -p tsconfig.build.json",
+    "prepublish": "npm run build",
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.2",
     "@types/node": "^20.3.3",
     "@typescript-eslint/eslint-plugin": "^5.61.0",
     "@typescript-eslint/parser": "^5.61.0",
@@ -36,7 +36,9 @@
     "eslint-plugin-prefer-arrow-functions": "^3.1.4",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "jest": "^29.6.0",
     "prettier": "^2.8.8",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
   },
