added objectEntries and jsonStringify

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,6 +73,28 @@
       }
     ],
     "simple-import-sort/exports": [2],
-    "simple-import-sort/imports": [2]
+    "simple-import-sort/imports": [
+      2,
+      {
+        "groups": [
+          // Side effect imports.
+          ["^\\u0000"],
+          // Node.js builtins prefixed with `node:`.
+          ["^node:"],
+          // Packages.
+          // Things that start with a letter (or digit or underscore), or `@` followed by a letter.
+          ["^@?\\w"],
+          // Absolute imports and other imports such as Vue-style `@/foo`.
+          // Anything not matched in another group.
+          ["^"],
+          // Relative imports.
+          // Anything that starts with a dot.
+          ["^\\."],
+          ["^\\./src/array.*"],
+          ["^\\./src/object.*"],
+          ["^\\./src/.*Case$|capitalize$"]
+        ]
+      }
+    ]
   }
 }
