--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "env": { "node": true, "jest": true, "es2022": true },
+  "env": { "node": true, "jest": true, "es2024": true },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
@@ -8,6 +8,9 @@
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:@typescript-eslint/strict",
+    "plugin:jest/recommended",
+    "plugin:jest/style",
+    "plugin:jest/all",
     "plugin:prettier/recommended"
   ],
   "ignorePatterns": ["node_modules", ".vscode", "dist"],
@@ -23,7 +26,8 @@
     "@typescript-eslint",
     "prefer-arrow-functions",
     "prettier",
-    "simple-import-sort"
+    "simple-import-sort",
+    "jest"
   ],
   "root": true,
   "rules": {
@@ -69,7 +73,8 @@
         "bracketSameLine": true,
         "endOfLine": "auto",
         "parser": "typescript",
-        "singleAttributePerLine": true
+        "singleAttributePerLine": true,
+        "trailingComma": "es5"
       }
     ],
     "simple-import-sort/exports": [2],
@@ -91,10 +96,19 @@
           // Anything that starts with a dot.
           ["^\\."],
           ["^\\./src/array.*"],
-          ["^\\./src/object.*"],
+          ["^\\./src/object.*", "^\\./src/pick$"],
           ["^\\./src/.*Case$|capitalize$"]
         ]
       }
     ]
+    // "jest/prefer-expect-assertions": [2]
+    // "jest/no-hooks": [2, { "allow": ["beforeEach"] }]
+    // "jest/no-standalone-expect": [0]
+    // "jest/prefer-expect-assertions": []
+  },
+  "settings": {
+    "jest": {
+      "version": "detect"
+    }
   }
 }
