--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
   ],
   "scripts": {
     "lint": "eslint . --ext ts",
+    "typeCheck": "tsc -b",
     "format": "eslint . --fix --ext ts",
-    "build": "rm -rf dist && tsc -p tsconfig.build.json",
+    "clean": "tsc -b tsconfig.build.json --clean",
+    "build": "tsc -b tsconfig.build.json",
     "prepublish": "npm run build",
-    "test": "jest --silent",
+    "test": "jest",
     "start": "ts-node index.ts"
   },
   "devDependencies": {
     "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.4.4",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
     "@typescript-eslint/parser": "^6.1.0",
     "eslint": "^8.45.0",
@@ -43,7 +45,8 @@
     "prettier": "^3.0.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "typescript-eslint-language-service": "^5.0.5"
   },
   "dependencies": {
     "@aryaemami59/ts-util-types": "github:aryaemami59/typescript-utility-types",
