--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,8 +26,7 @@
     "useDefineForClassFields": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitOverride": true,
-    "noEmitOnError": true,
-    "disableSourceOfProjectReferenceRedirect": false,
+    "noEmitOnError": false,
     "useUnknownInCatchVariables": true,
     "listEmittedFiles": true,
     "plugins": [{ "name": "typescript-eslint-language-service" }]
