--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "declaration": true,
+    // "declaration": true,
     "esModuleInterop": true,
     "extendedDiagnostics": true,
     "forceConsistentCasingInFileNames": true,
@@ -12,11 +12,11 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noUncheckedIndexedAccess": true,
-    "outDir": "dist",
+    // "outDir": "dist",
     "resolveJsonModule": true,
-    "rootDir": "./",
+    // "rootDir": "./",
     "skipLibCheck": true,
-    "sourceMap": true,
+    // "sourceMap": true,
     "strict": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true,
@@ -25,7 +25,7 @@
     "useDefineForClassFields": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitOverride": true,
-    "noEmitOnError": false,
+    // "noEmitOnError": false,
     "useUnknownInCatchVariables": true
   },
   "buildOptions": {
