--- a/package.json
+++ b/package.json
@@ -8,9 +8,6 @@
   "module": "dist/index.js",
   "author": "Arya Emami <aryaemami59@yahoo.com> (https://github.com/aryaemami59)",
   "private": false,
-  "overrides": {
-    "tsconfig-paths": "^4.0.0"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/aryaemami59/typescript-utility-functions"
@@ -22,35 +19,35 @@
   ],
   "scripts": {
     "lint": "eslint . --ext ts",
-    "typeCheck": "npx tsc -b tsconfig.json",
+    "type-check": "npx tsc -b tsconfig.json",
     "format": "eslint . --fix --ext ts",
     "clean": "rm -rf dist",
     "build": "rm -rf dist && tsc -b tsconfig.build.json",
     "prepublish": "npm run build",
     "test": "jest",
-    "start": "npm run typeCheck & npm run clean"
+    "start": "npm run type-check & npm run clean"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.3",
-    "@types/node": "^20.4.9",
-    "@typescript-eslint/eslint-plugin": "^6.3.0",
-    "@typescript-eslint/parser": "^6.3.0",
-    "eslint": "^8.46.0",
+    "@types/jest": "^29.5.4",
+    "@types/node": "^20.5.6",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^8.47.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-import": "^2.28.0",
+    "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-jest": "^27.2.3",
     "eslint-plugin-json-schema-validator": "^4.6.0",
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-prefer-arrow-functions": "^3.1.4",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "jest": "^29.6.2",
-    "prettier": "^3.0.1",
+    "jest": "^29.6.4",
+    "prettier": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6",
+    "typescript": "^5.2.2",
     "typescript-eslint-language-service": "^5.0.5"
   },
   "dependencies": {
