--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -4,13 +4,18 @@
     "esModuleInterop": true,
     "extendedDiagnostics": true,
     "forceConsistentCasingInFileNames": true,
+    "incremental": true,
     "isolatedModules": true,
-    "noEmit": true,
+    "listEmittedFiles": true,
     "module": "ESNext",
     "moduleResolution": "Node",
+    "noEmit": true,
+    "noEmitOnError": true,
     "noErrorTruncation": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
+    "noImplicitOverride": true,
+    "noPropertyAccessFromIndexSignature": true,
     "noUncheckedIndexedAccess": true,
     "outDir": "dist",
     "resolveJsonModule": true,
@@ -23,15 +28,13 @@
     "strictPropertyInitialization": true,
     "target": "ESNext",
     "useDefineForClassFields": true,
-    "noPropertyAccessFromIndexSignature": true,
-    "noImplicitOverride": true,
-    "incremental": true,
-    "noEmitOnError": true,
     "useUnknownInCatchVariables": true
   },
-  "buildOptions": {
-    "verbose": true,
-    "dry": true
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node",
+    "transpileOnly": true
   },
+  "buildOptions": { "verbose": true, "dry": true },
   "exclude": ["./dist", "./node_modules"]
 }
